Add RegisterScreen UI tests and configuration
- Create `RegisterScreenTest` with test cases for form validation, button states, and registration flows.
- Add `testTag` modifiers to `RegisterScreen` text fields, checkbox, and button to support UI testing.
- Add MockK and Koin test dependencies to `libs.versions.toml` and `build.gradle.kts`.
- Configure `packaging` options to exclude conflicting META-INF license files.
- Update IDEA configuration settings for test execution and results.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -43,7 +43,10 @@ firebase-config = { group = "com.google.firebase", name = "firebase-config" }
 firebase-perf = { group = "com.google.firebase", name = "firebase-perf" }
 koin-android = { group = "io.insert-koin", name = "koin-android", version.ref = "koin" }
 koin-androidx-compose = { group = "io.insert-koin", name = "koin-androidx-compose", version.ref = "koin" }
+koin-test = { group = "io.insert-koin", name = "koin-test", version.ref = "koin" }
+koin-test-junit4 = { group = "io.insert-koin", name = "koin-test-junit4", version.ref = "koin" }
 mockk = { group = "io.mockk", name = "mockk", version.ref = "mockk" }
+mockk-android = { group = "io.mockk", name = "mockk-android", version.ref = "mockk" }
 kotlinx-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "coroutinesTest" }
 
 [plugins]
