Integrate Firebase App Check and safeguard Koin initialization
- Add dependencies for Firebase App Check (Play Integrity and Debug) to version catalog and build file.
- Add a test case to `FirebaseConnectionTest` to verify App Check initialization.
- Remove `FirestoreProductTest` file.
- Wrap Koin initialization in `AnabulApp` with a try-catch block to handle existing instances.
- Update Android Studio configuration files for App Insights, deployment targets, and test results.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -41,6 +41,8 @@ firebase-storage = { group = "com.google.firebase", name = "firebase-storage" }
 firebase-messaging = { group = "com.google.firebase", name = "firebase-messaging" }
 firebase-config = { group = "com.google.firebase", name = "firebase-config" }
 firebase-perf = { group = "com.google.firebase", name = "firebase-perf" }
+firebase-appcheck-playintegrity = { group = "com.google.firebase", name = "firebase-appcheck-playintegrity" }
+firebase-appcheck-debug = { group = "com.google.firebase", name = "firebase-appcheck-debug" }
 koin-android = { group = "io.insert-koin", name = "koin-android", version.ref = "koin" }
 koin-androidx-compose = { group = "io.insert-koin", name = "koin-androidx-compose", version.ref = "koin" }
 koin-test = { group = "io.insert-koin", name = "koin-test", version.ref = "koin" }
